<resources>
    <string name="app_name">Souba (Beta)</string>
    <string name="title_activity_scrolling_clackfram">ScrollingClackfram</string>
    <string name="large_text">

    </string>
    <string name="hint_user_id">User ID</string>
    <string name="get_custom_token">Get Token</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="custom_token">Custom Token</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="start_phone_auth">Start</string>
    <string name="verify_phone_auth">Verify</string>
    <string name="resend_phone_auth">Resend</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="hint_verification_code">Verification Code</string>
    <string name="status_code_sent">Code Sent</string>
    <string name="status_verification_failed">Verification failed</string>
    <string name="status_verification_succeeded">Verification succeeded</string>
    <string name="status_sign_in_failed">Sign-in failed</string>
    <string name="instant_validation">(instant validation)</string>
    <string name="title_activity_welcome">Fisher Hub</string>
    <string name="next">SUIVANT</string>
    <string name="skip">SAUT</string>
    <string name="start">ALLER</string>
    <string name="slide_1_title">Fisher Hub</string>
    <string name="slide_1_desc">Bienvenus dans FAH, première plateforme mobile pour pisciculteurs au Bénin. </string>
    <string name="slide_2_title">Productivité</string>
    <string name="slide_2_desc">Un outil complet de composition ou d’achat d’aliment pour poisson</string>
    <string name="slide_3_title">Communauté pro</string>
    <string name="slide_3_desc">Discuté avec de nombreux pisciculteurs dans le mode et vainquez vos difficultés</string>
    <string name="slide_4_title">Marché Virtuelle</string>
    <string name="slide_4_desc">Acheté et/ou vendez des produits agricoles locaux et profité d’une livraison gratuite!</string>
    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>
    <string name="action_settings">Settings</string>
    <string name="primppagetext">Quelle genre d’acteurs de la pisciculture êtes vous?</string>
    <string name="textcommandpri">Veillez préciser les informations qui caractériseront votre aliment.</string>
    <string name="starter">Debutant</string>
    <string name="prof">Professionnel</string>
    <string name="Communot">Communaute</string>
    <string name="hlp">help</string>
    <string name="title_activity_mainsuperd">Aide générale</string>
    <string name="txmais">Maïs</string>
    <string name="txcmac">Cossette de manioc</string>
    <string name="txble">Son de Blé</string>
    <string name="txsoja">Tourteau de Soja</string>
    <string name="txcoton">Tourteau de Coton</string>
    <string name="txpal">Tourteau palmiste</string>
    <string name="txara">Tourteau d’Arachide</string>
    <string name="txfpo">Farine de poisson</string>
    <string name="txhr">Huile rouge</string>
    <string name="txch">Coquille d’huitre</string>
    <string name="txlys">Lysine</string>
    <string name="txmet">Méthionine</string>
    <string name="txphb">Phosphate bicalcique</string>
    <string name="txsel">Nacl (Sel)</string>
    <string name="txprmx">Prémix (CMV)</string>
    <string name="txsfer">Sulfate de Fer</string>
    <string name="txdre">Drèche</string>
    <string name="txcpont">Concentré ponte</string>
    <string name="txchair">Concentré chair</string>
    <string name="txsojag">Soja Graine</string>
    <string name="txsmais">Son  de maïs</string>
    <string name="txsriz">Son de Riz</string>
    <string name="txmor">Moringa</string>
    <string name="title_activity_main_starter">Débutant</string>
    <string name="title_activity_main_starterj">Commande</string>
    <string name="comandnam">Nom et Prénom</string>
    <string name="comandnami">Nom, Prénom, Contact</string>
    <string name="comandcountry">Pays et Ville</string>
    <string name="comandadress">Adresse</string>
    <string name="comandprice">Prix du kg d’aliment en F CFA (500 Min).</string>
    <string name="comandinfos">Contact téléphonique</string>
    <string name="comandother">Information supplémentaires</string>
    <string name="comandotheri">Info. Supp. et taille de l’alim. </string>
    <string name="qcommand">Quantité de commande</string>
    <string name="commandel">Race de poisson et age</string>
    <string name="commandta">Taille en mm de l’aliment</string>
    <string name="cinfotrue">Commande effectuer!</string>
    <string name="cinfofalse">Verifier les informations! </string>
    <string name="hermib">Commander!</string>
    <string name="title_activity_fahstart">Fish Alimentation Hub</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="spikastrb">Entrer le nom de votre groupe privé pour le créer et partager le nom à vos collèges pour qu’ils puissent vous rejoindre. Ou entré le nom d’un groupe privé existant pour le rejoindre…</string>
    <string name="spikastrbc">Information, Groupe de discussion.Le système est fait pour créer automatiquement un groupe de discussion si le nom que vous avez entré n’existe pas ; mais s’il existe, il recherche le groupe et vous y intègre ; veillez bien écrire le nom qu’on vous a fournis de peur de vous intégrer dans un groupe existant. Dans le cas où vous voulez en créer essayer de personnaliser au maximum votre nom de groupe. Pour finir, vous avez la possibilité d’envoyer des fichier et image-audio; familliarisez vous!.</string>
    <string name="title_activity_evaluateff">Food Evaluation</string>
    <string name="title_activity_costeval">Food Cost tool</string>
    <string name="title_activity_litetest">litetest</string>
    <string name="title_home">Vos Poissons</string>
    <string name="title_dashboard">Achat d\'aliment</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_annonce">annonce</string>
    <string name="title_activity_connexionuser">connexionuser</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="option_spec_subtitle">Choisissez une spéculation sur laquelle vous allez travailler durant cette cession</string>
    <string name="option_spec_title">Formulation d\'aliment</string>
    <string name="poulet_chair_text">Poulet chair</string>
    <string name="pondeuse_text">Pondeuse</string>
    <string name="porc_text">Porc</string>
    <string name="clarias_text">Clarias</string>
    <string name="tilapia_text">Tilapia</string>
    <string name="escargots_text">Escargot</string>
    <string name="subtitle_matselect">Sélectionner les ingrédiants de base de votre localité qui serons composante de l\'aliment</string>
    <string name="text_guard_feedIA">* En cochant cette case vous choisissez d’utilisé une intelligence artificiel de calcule d’aliment. Dans le cas échant ce seras un algorithme de calcule d’aliment qui s’en chargeras ; plus de détail de l’algo dans le support.</string>
    <string name="calculer_but_matselect"> Déterminer </string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="calculer_rtr_matselect">Retour</string>
    <string name="title_activity_main3">Main3Activity</string>
</resources>