<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main_actyfish"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/cheba"
    tools:context="daraunited.com.fisherinnovapps.MainActyfish">
    <TextView
        android:text="@string/primppagetext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:id="@+id/textView"
        android:textSize="25dp"
        android:textStyle="bold"
        android:textColor="@android:color/holo_orange_light"
        android:textAlignment="center"
        android:layout_alignLeft="@+id/button"
        android:layout_alignStart="@+id/button" />

    <Button
        android:text="@string/starter"
        android:layout_width="600px"
        android:layout_height="60dp"
        android:layout_marginTop="30dp"
        android:id="@+id/button"
        android:background="@drawable/grc"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/prof"
        android:layout_width="600px"
        android:layout_height="60dp"
        android:id="@+id/button3"
        android:background="@drawable/grc"
        android:layout_centerVertical="true"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/button"
        android:layout_alignLeft="@+id/button"
        android:layout_alignStart="@+id/button" />
    <Button
        android:text="@string/Communot"
        android:layout_width="600px"
        android:layout_height="60dp"
        android:id="@+id/button4"
        android:background="@drawable/grc"
        android:visibility="invisible"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/button3"
        android:layout_alignLeft="@+id/button3"
        android:layout_alignStart="@+id/button3" />

    <Button
        android:text="@string/hlp"
        android:layout_width="600px"
        android:layout_height="60dp"
        android:id="@+id/button2"
        android:layout_marginTop="20dp"
        android:background="@drawable/grc"
        android:visibility="invisible"
        android:layout_below="@+id/button4"
        android:layout_alignLeft="@+id/button4"
        android:layout_alignStart="@+id/button4" />


</RelativeLayout>
