<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:id="@+id/appBarLayout">
    <com.google.android.material.appbar.CollapsingToolbarLayout
        android:id="@+id/collapsing_toolbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:contentScrim="?attr/colorPrimary"
        app:layout_scrollFlags="scroll|exitUntilCollapsed">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/inovjpeg"
            app:layout_collapseMode="parallax"/>

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_collapseMode="pin"/>
        <TextView
            android:text=""
            android:textSize="33dp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:id="@+id/textto" />


    </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:id="@+id/nestedScrollView">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="24dp">
        <TextView
            android:text="@string/textcommandpri"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:id="@+id/textView"
            android:textSize="20dp"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"
            android:textAlignment="center" />
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">
                <GridLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="56dp"
                        android:text="@string/comandnam"
                        android:ems="10"
                        android:editable="false"
                        android:id="@+id/TxCMAC" />

                </GridLayout>
                <EditText
                    android:layout_height="56dp"
                    android:inputType="text"
                    android:ems="10"
                    android:text="..."
                    android:id="@+id/cname"
                    android:layout_width="match_parent" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">
                <GridLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="56dp"
                        android:text="@string/comandprice"
                        android:ems="10"
                        android:editable="false"
                        android:id="@+id/TxCMeaAC" />

                </GridLayout>
                <EditText
                    android:layout_height="56dp"
                    android:inputType="number"
                    android:ems="10"
                    android:text="0"
                    android:id="@+id/calu"
                    android:layout_width="match_parent" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">
                <GridLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="56dp"
                        android:text="@string/qcommand"
                        android:ems="10"
                        android:editable="false"
                        android:id="@+id/TxCttttoMAC" />

                </GridLayout>
                <EditText
                    android:layout_height="56dp"
                    android:inputType="number"
                    android:ems="10"
                    android:text="0"

                    android:id="@+id/cqte"
                    android:layout_width="match_parent" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">
                <GridLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="56dp"
                        android:text="@string/comandcountry"
                        android:ems="10"
                        android:editable="false"
                        android:id="@+id/TxCnMAC" />

                </GridLayout>
                <EditText
                    android:layout_height="56dp"
                    android:inputType="text"
                    android:ems="10"
                    android:text="..."
                    android:id="@+id/cville"
                    android:layout_width="match_parent" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">
                <GridLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="56dp"
                        android:text="@string/comandadress"
                        android:ems="10"
                        android:editable="false"
                        android:id="@+id/TxCMaAC" />

                </GridLayout>
                <EditText
                    android:layout_height="56dp"
                    android:inputType="text"
                    android:ems="10"
                    android:text="..."
                    android:id="@+id/cadr"
                    android:layout_width="match_parent" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">
                <GridLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="56dp"
                        android:text="@string/comandinfos"
                        android:ems="10"
                        android:editable="false"
                        android:id="@+id/TxCyyMAC" />

                </GridLayout>
                <EditText
                    android:layout_height="56dp"
                    android:inputType="text"
                    android:ems="10"
                    android:text="..."
                    android:id="@+id/ccnt"
                    android:layout_width="match_parent" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">
                <GridLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="56dp"
                        android:text="@string/comandother"
                        android:ems="10"
                        android:editable="false"
                        android:id="@+id/TsexCMAC" />

                </GridLayout>
                <EditText
                    android:layout_height="56dp"
                    android:inputType="text"
                    android:ems="10"
                    android:text="..."
                    android:id="@+id/coth"
                    android:layout_width="match_parent" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">
                <GridLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="56dp"
                        android:text="@string/commandel"
                        android:ems="10"
                        android:editable="false"
                        android:id="@+id/TxtysCMAC" />

                </GridLayout>
                <EditText
                    android:layout_height="56dp"
                    android:inputType="text"
                    android:ems="10"
                    android:text="..."
                    android:id="@+id/cel"
                    android:layout_width="match_parent" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">
                <GridLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="56dp"
                        android:text="@string/commandta"
                        android:ems="10"
                        android:editable="false"
                        android:id="@+id/TxCMAervC" />
                </GridLayout>
                <EditText
                    android:layout_height="56dp"
                    android:inputType="text"
                    android:ems="10"
                    android:text="..."
                    android:id="@+id/cmta"
                    android:layout_width="match_parent" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@drawable/ic_shopping_cart_white_48dp" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>
